objects/Account_Group__c.object
<CustomObject>
    <fields>
        <fullName>Account_Group_ID__c</fullName>
        <description>SAV ID in SAVM</description>
        <label>SAVM ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Group_Team_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Flag is used to determine if the FDEV Group is owned by a Team and not individual.</description>
        <label>Sales Account Team Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>FDEV Group End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDEV_Account_Group_Alias__c</fullName>
        <description>Alias for FDEV Group Owner</description>
        <label>SAVM Account Group Alias</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FDEV_Account_Group_Owner__c</fullName>
        <description>FDEV Group Owner in FDEV</description>
        <label>Sales Account Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ParentTerritoryID__c</fullName>
        <description>Parent Territory ID for FDEV Group in FDEV</description>
        <label>ParentTerritory ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Territory__c</fullName>
        <description>Parent Territory for FDEV Group in FDEV</description>
        <label>Parent Territory</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <description>Primary Address of an FDEV Group</description>
        <label>Primary Address</label>
        <length>1600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SalesAccountView</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Sub Segment of FDEV Group</description>
        <label>Sub Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TerritoryID__c</fullName>
        <description>Lowest Level Territory ID for FDEV Group</description>
        <label>TerritoryID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <description>Territory for an FDEV Group</description>
        <label>Territory</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vertical_Primary_Detail__c</fullName>
        <description>Vertical Primary Detail for an FDEV Group</description>
        <label>Vertical Primary Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vertical_Primary_Sub__c</fullName>
        <description>Sub-Vertical for an FDEV Group</description>
        <label>Sub Vertical</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vertical_Primary_Top__c</fullName>
        <description>Vertical for an FDEV Group</description>
        <label>Vertical</label>
        <type>TextArea</type>
    </fields>
    <customHelpPage>SalesAccountView_Help_Window</customHelpPage>
    <description>This Object stores FDEV Group information from FDEV</description>
    <label>SalesAccountView</label>
    <nameField>
        <label>Sales Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesAccountView</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vertical_Primary_Top__c</columns>
        <columns>Vertical_Primary_Detail__c</columns>
        <columns>Vertical_Primary_Sub__c</columns>
        <columns>Segment__c</columns>
        <columns>Account_Group_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>